Prediction improvment TODO star class